Fix card-content width on tablet

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -15,6 +15,7 @@
     
         .card-content {
             height: 80%;
+            width: 100%;
             margin-left: 5%;
             margin-right: 5%;
             margin-top: auto;
